# Daoist-server

./: .gitignore  Cargo.toml  README.md
deploy/: debian12.sh  init-v2ray.sh  jetson-nano-deploy.sh  jupyterlab-service.sh  merge-pdf-one.py  opensuse15.sh
doc/: 业务活动图.dio  智能机器助理需求-策划说明.md  研发里程碑.dio  系统文案体系.md  系统框架.dio
monitor/: .gitignore  README.md  calculate-time-interval.py  deploy-wx-xp.sh  pysmb-send-files.py  requirements.ini  server.py  tonghuashun.py  update-agent-XP-v.01.bat  update-rpaAgent.py  wx-hello.py  wx-imagereview.py  流程更新记录表和检索.sql  终端wifi-密码.sh
src/: init_config.toml  lib.rs  main-bevy.rs  main-test-csv.rs  main.rs  math.rs  monitor12306.rs  ploter.rs  smbc.rs  sync_mariadb.rs  tokio-task.rs  travel_plan.rs
src/plotMap/: README.MD  cycle.rs  mult_np.py
src/search/: lib.rs
ui/: appwindow.slint  button.slint
