[package]
name = "daoist"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
time = { version = "0.3", features = ["local-offset"] }
csv = "1.2.2"
plotters = "0.3.5"
polars = "0.33.2"
meilisearch-sdk = "0.24.3"
# futures: because we want to block on futures
futures = "0.3"
# serde: required if you are going to use documents
serde = { version="1.0.152",   features = ["derive"] }
serde_derive = "1.0.152"
confy = "0.6.1"
# serde_json: required in some parts of this guide
serde_json = "1.0"
# 读取和统计文件
walkdir = "2"
toml = "0.8.12"
remotefs-smb = "0.2.1"
remotefs = "0.2.0"
tokio = "1.38.1"
tokio-console = "0.1.11"
prometheus = "0.13.4"
rand = "0.8"
slint = "1.7.2"
# Rust supports using Slint with WebAssembly.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }


[build-dependencies]
slint-build = "1.7.2"
